# casadi_ipopt_examples

./: CMakeLists.txt  package.xml
description/: cart_pendulum_model.urdf  rock_model.urdf
launch/: cartpend.launch  prediction.launch
rviz/: cartpend.rviz
src/: cart_pendulum_example_node.cpp  main.cpp  rock_example_node.cpp
